--- a/examples/Makefile
+++ b/examples/Makefile
@@ -520,7 +520,8 @@ SHADERS = \
     shaders/shaders_spotlight \
     shaders/shaders_hot_reloading \
     shaders/shaders_mesh_instancing \
-    shaders/shaders_multi_sample2d
+    shaders/shaders_multi_sample2d \
+    shaders/write_depth
 
 AUDIO = \
     audio/audio_module_playing \
