--- a/examples-switch/Makefile
+++ b/examples-switch/Makefile
@@ -413,6 +413,7 @@ CORE = \
     core/core_input_mouse \
     core/core_input_mouse_wheel \
     core/core_input_gamepad \
+    core/core_input_multi_gamepad \
     core/core_input_multitouch \
     core/core_input_gestures \
     core/core_2d_camera \
