--- a/MyGame/example-raylib/example-raylib.vcxproj
+++ b/MyGame/example-raylib/example-raylib.vcxproj
@@ -156,6 +156,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\examples\shaders\shaders_basic_lighting.c" />
+    <ClCompile Include="snake.c" />
+    <ClCompile Include="snake_remake.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
