Update raylib.pc.in to fix colors on macs running raylib.
Raylib is using c++11 colors, by default macOS does not use c++11 colors, so to fix this we have to put a flag to specify.

--- a/raylib.pc.in
+++ b/raylib.pc.in
@@ -10,4 +10,4 @@ Version: @PROJECT_VERSION@
 Libs: -L"${libdir}" -lraylib @PKG_CONFIG_LIBS_EXTRA@
 Libs.private: @PKG_CONFIG_LIBS_PRIVATE@
 Requires.private: @GLFW_PKG_DEPS@
-Cflags: -I"${includedir}"
+Cflags: -I"${includedir}" -std=c++11
