[example] Core Input Gestures for Web

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -405,6 +405,7 @@ CORE = \
     core/core_input_gamepad \
     core/core_input_multitouch \
     core/core_input_gestures \
+    core/core_input_gestures_web \
     core/core_2d_camera \
     core/core_2d_camera_platformer \
     core/core_2d_camera_mouse_zoom \
