Add examples/shaders/shaders_lightmap.c to Makefiles

--- a/examples/Makefile.Web
+++ b/examples/Makefile.Web
@@ -504,6 +504,7 @@ SHADERS = \
     shaders/shaders_simple_mask \
     shaders/shaders_spotlight \
     shaders/shaders_hot_reloading \
+    shaders/shaders_lightmap \
     shaders/shaders_mesh_instancing \
     shaders/shaders_multi_sample2d \
     shaders/shaders_write_depth \
