Fix makefile comment

--- a/src/Makefile
+++ b/src/Makefile
@@ -630,6 +630,8 @@ else
 endif
 
 # Compile all modules with their prerequisites
+
+# Compile core module
 rcore.o : rcore.c raylib.h rlgl.h utils.h raymath.h rcamera.h rgestures.h rcore.h 
 	$(CC) -c $< $(CFLAGS) $(INCLUDE_PATHS)
 
