Remove raylib_opengl_interop from examples Makefile

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -505,7 +505,7 @@ AUDIO = \
 OTHERS = \
     others/easings_testbed \
     others/embedded_files_loading \
-    others/raylib_opengl_interop \
+#    others/raylib_opengl_interop \
     others/raymath_vector_angle \
     others/rlgl_compute_shader \
     others/rlgl_standalone
