Tweak makefiles for PLATFORM_DRM and move rcore_drm's dependencies to rcore.h

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -225,6 +225,7 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     endif
 endif
 ifeq ($(PLATFORM),PLATFORM_DRM)
+    INCLUDE_PATHS += -I$(RAYLIB_INCLUDE_PATH)
     INCLUDE_PATHS += -I/usr/include/libdrm
 endif
 
