--- a/src/Makefile
+++ b/src/Makefile
@@ -633,7 +633,7 @@ endif
 # Compile all modules with their prerequisites
 
 # Prerequisites of core module
-rcore.o : rcore_android.c rcore_desktop.c rcore_drm.c rcore_template.c rcore_web.c
+rcore.o : platforms/rcore_android.c platforms/rcore_desktop.c platforms/rcore_drm.c platforms/rcore_template.c platforms/rcore_web.c
 
 # Compile core module
 rcore.o : rcore.c raylib.h rlgl.h utils.h raymath.h rcamera.h rgestures.h
