Review prerequisites of rcore.c
rcore_desktop_sdl.c was not present in the list of prerequisites this
patch changes them to use a wildcard, so any other platforms added in
future will be tracked properly

--- a/src/Makefile
+++ b/src/Makefile
@@ -633,7 +633,7 @@ endif
 # Compile all modules with their prerequisites
 
 # Prerequisites of core module
-rcore.o : platforms/rcore_android.c platforms/rcore_desktop.c platforms/rcore_drm.c platforms/rcore_template.c platforms/rcore_web.c
+rcore.o : platforms/*.c
 
 # Compile core module
 rcore.o : rcore.c raylib.h rlgl.h utils.h raymath.h rcamera.h rgestures.h
